--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_camera">Legacy Camera</string>
+    <string name="title_activity_camera2">Camera2Activity</string>
 </resources>
